--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>oracle-java-dev</name>
+	<name>oracle-lamba-lesson-one-dev</name>
 	<comment></comment>
 	<projects>
 	</projects>
